Update .gitignore for maintaining readme, package, and license inside dist.  Add declaration files to ts output.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "private": true,
   "author": "Joseph Bayes",
-  "license": "ISC",
+  "license": "MIT",
   "scripts": {
     "test": "jest --watch",
     "test-once": "jest --collectCoverage --coverageReporters lcov clover",
     "lint": "eslint src/**/*.ts",
     "build": "tsc --sourceMap",
-    "build-prod": "tsc"
+    "build-prod": "tsc",
+    "publish": "npm publish dist"
   },
   "devDependencies": {
     "@types/jasmine": "^2.8.17",
