--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "allowJs": true,
     "sourceMap": false,
+    "declaration": true,
     "outDir": "dist",
     "strict": true,
     "noImplicitAny": false,
