--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest --watch",
     "test-once": "jest --collectCoverage --coverageReporters lcov clover",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.ts && eslint src/**/*.tsx",
     "build": "tsc --sourceMap --watch",
     "build-prod": "tsc",
     "publish": "npm publish dist"
