Remove support for string templates in component Template method. Also makes Template an abstract method which must be implemented.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "jsxFactory": "ParseJsx",
     "jsxFragmentFactory": "Fragment"
   },
-  "include": ["src/**/*.ts", "src/components/rawHtml.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
