--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     "jsxFragmentFactory": "Fragment"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.spec.tsx"]
 }
