--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jasmine-core": "^2.5.2",
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
-    "tsbase": "^3.3.16",
+    "tsbase": "3.5.0",
     "tslib": "^1.13.0",
     "tsmockit": "^1.0.5",
     "typescript": "^4.2.3",
