--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "publish": "npm publish dist"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.17",
-    "@types/jest": "^26.0.15",
+    "@types/jasmine": "^2.8.18",
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^6.8.0",
     "jasmine-core": "^2.5.2",
     "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "tsbase": "3.5.0",
+    "ts-jest": "^26.5.6",
+    "tsbase": "^3.7.0",
     "tslib": "^1.13.0",
-    "tsmockit": "^1.0.5",
-    "typescript": "^4.2.3",
-    "xss": "^1.0.8"
+    "tsmockit": "^1.1.0",
+    "typescript": "^4.4.3",
+    "xss": "^1.0.9"
   }
 }
