--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["es2015", "dom"],
     "allowJs": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "declaration": true,
     "outDir": "dist",
     "strict": true,
