--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,69 +14,35 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "quotes": [
-      "error",
-      "single",
-      "avoid-escape"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "no-restricted-imports": [
-      "error",
-      "tsbase"
-    ],
+    "quotes": ["error", "single", "avoid-escape"],
+    "semi": ["error", "always"],
+    "no-restricted-imports": ["error", "tsbase"],
     "curly": "error",
     "eol-last": "error",
-    "indent": [
-      "error",
-      2
-    ],
+    "indent": ["error", 2],
     "no-bitwise": "error",
     "no-dupe-args": "error",
     "no-console": [
       "error",
       {
-        "allow": [
-          "error",
-          "warn"
-        ]
+        "allow": ["error", "warn"]
       }
     ],
     "prefer-const": "error",
     "no-empty": "error",
     "no-var": "error",
     "no-eval": "error",
-    "no-use-before-define": "error",
     "no-trailing-spaces": "error",
     "no-fallthrough": "error",
     "no-multiple-empty-lines": "error",
-    "max-len": [
-      "error",
-      150
-    ],
-    "max-lines": [
-      "error",
-      200
-    ],
-    "max-depth": [
-      "error",
-      3
-    ],
+    "max-len": ["error", 150],
+    "max-lines": ["error", 200],
+    "max-depth": ["error", 3],
     "no-duplicate-case": "error",
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
-    "complexity": [
-      "error",
-      6
-    ],
+    "comma-dangle": ["error", "never"],
+    "complexity": ["error", 6],
     "brace-style": [
       "error",
       "1tbs",
@@ -88,10 +54,7 @@
     "no-unreachable": "error",
     "no-unneeded-ternary": "error",
     "no-extra-semi": "error",
-    "max-params": [
-      "error",
-      5
-    ],
+    "max-params": ["error", 5],
     "no-nested-ternary": "error"
   }
 }
