--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Use Node.js 16.x
+      - name: Use Node.js 16.13
         uses: actions/setup-node@v1
         with:
-          node-version: 16.x
+          node-version: 16.13
       - run: npm i
       - run: npm run build-prod
       - run: npm run lint
