--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "publish": "npm publish dist"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.18",
-    "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.2.0",
-    "jasmine-core": "^2.5.2",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "tsbase": "^5.1.0",
-    "tslib": "^2.4.0",
-    "tsmockit": "^2.0.2",
-    "typescript": "^4.7.4",
-    "xss": "^1.0.9"
+    "@types/jasmine": "^4.3.5",
+    "@types/jest": "^29.5.4",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "eslint": "^8.48.0",
+    "jasmine-core": "^5.1.1",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "tsbase": "^5.3.1",
+    "tslib": "^2.6.2",
+    "tsmockit": "^2.0.5",
+    "typescript": "^5.2.2",
+    "xss": "^1.0.14",
+    "jest-environment-jsdom": "^29.6.4"
   }
 }
