Set jsdom env in jest config and remove same purpose comments from test files.

--- a/jest.config.json
+++ b/jest.config.json
@@ -19,6 +19,7 @@
   "testMatch": [
     "**/*.(test|spec).(ts|tsx)"
   ],
+  "testEnvironment": "jsdom",
   "coveragePathIgnorePatterns": [
     "./src/utilities/testHelpers.ts",
     "/node_modules/",
