--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: 'main'
+    branches: ['main']
   pull_request:
-    branches: '*'
+    branches: ['*']
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       - run: npm run build-prod
       - run: npm run lint
       - run: npm run test-once
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
           name: build
           path: ./dist
